--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,23 @@
         android:id="@+id/navigation_review"
         android:name="com.example.tastebuds.ui.review.ReviewFragment"
         android:label="@string/title_review"
-        tools:layout="@layout/fragment_review" />
+        tools:layout="@layout/fragment_review" >
+        <action
+            android:id="@+id/action_navigation_review_to_navigation_new_review"
+            app:destination="@id/navigation_new_review" />
+        <action
+            android:id="@+id/action_navigation_review_to_navigation_login"
+            app:destination="@id/navigation_login" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_new_review"
+        android:name="com.example.tastebuds.ui.review.NewReviewFragment"
+        android:label="@string/title_review"
+        tools:layout="@layout/fragment_new_review" >
+        <action
+            android:id="@+id/action_navigation_new_review_to_navigation_review"
+            app:destination="@id/navigation_review" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_favourites"
         android:name="com.example.tastebuds.ui.favourites.FavouritesFragment"
