--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,16 @@
         android:id="@+id/navigation_home"
         android:name="com.example.tastebuds.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_maps"
+            app:destination="@id/navigation_maps" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_maps"
+        android:name="com.example.tastebuds.ui.home.MapsFragment"
+        android:label=""
+        tools:layout="@layout/fragment_maps" />
     <fragment
         android:id="@+id/navigation_review"
         android:name="com.example.tastebuds.ui.review.ReviewFragment"
